# passgen-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  tests.yml
docs/: API_REFERENCE.md  README.md
examples/: basic_generation.py
passgen_core/: encryptors.py  password_generator.py
tests/: test_encryptors.py  test_generator.py
